--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,32 @@
-# This is a basic workflow to help you get started with Actions
-name: Connect to an AWS role from a GitHub repository
+name: AWS S3 Bucket
 
-# Controls when the action will run. Invokes the workflow on push events but only for the main branch
+# Trigger the workflow every push to branch "main"
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
-env:
-  
-  AWS_REGION : "ap-south-1" #Change to reflect your Region
-
-# Permission can be added at job level or workflow level    
+# Necessary permissions for workflow
 permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+  id-token: write
+  contents: read
+
 jobs:
-  AssumeRoleAndCallIdentity:
+  S3BucketIntegration:
     runs-on: ubuntu-latest
     steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v3
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1.7.0
+      - uses: actions/checkout@v3
+      
+      # Install awscli
+      - uses: unfor19/install-aws-cli-action@v1
+      
+      # Assume the OIDC Role to get temporary credentials 
+      - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::768132174891:role/poc-2-tp-role" #change to reflect your IAM role’s ARN
-          role-session-name: GitHub_to_AWS_via_FederatedOIDC
-          aws-region: "ap-south-1"
-      # Hello from AWS: WhoAmI
-      - name: Sts GetCallerIdentity
+          aws-region: ap-south-1
+          role-to-assume: arn:aws:iam::768132174891:role/poc-2-tp-role
+  
+      # List all buckets
+      - name: List S3 Bucket
         run: |
-          aws sts get-caller-identity
+          echo "==> Listing all S3 buckets"
+          aws s3 ls # This is a basic workflow to help you get started with Actions
