Added build script

--- a/App/AppointMentService/package.json
+++ b/App/AppointMentService/package.json
@@ -5,6 +5,7 @@
   "main": "AppointmentService.js",
   "scripts": {
     "start": "node AppointmentService.js",
+    "build": "tsc --outDir build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
