--- a/.github/workflows/basiworkflow.yml
+++ b/.github/workflows/basiworkflow.yml
@@ -1,10 +1,8 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ Dev, Stage ]
 
 jobs:
   build:
@@ -25,12 +23,23 @@ jobs:
         cache: 'npm'
 
     # Step 3: Install dependencies
-    - name: Install dependencies
+    - name: Install dependencies for appointment service
+      working-directory: App/AppointMentService
+      # Using 'npm ci' is recommended for CI/CD environments as it's faster and more reliable
+      run: npm ci
+
+    - name: Install dependencies for PatientMonitoring service
+      working-directory: App/PatientService
       # Using 'npm ci' is recommended for CI/CD environments as it's faster and more reliable
       run: npm ci
 
     # Step 4: Build the application if a build script exists
-    - name: Build application
+    - name: Build application AppointMentService
+      working-directory: App/AppointMentService
+      run: npm run build --if-
+
+    - name: Build application PatientService
+      working-directory: App/PatientService
       run: npm run build --if-present
 
     # Step 5: Run tests
