--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image for Appointment
-        run: docker build -f Dockerfile-appointment -t appointMentService .
+        run: docker build -f Dockerfile-appointment -t appointment-service .
 
       - name: Build Docker image for Patient
-        run: docker build -f Dockerfile-patient -t patientService .
+        run: docker build -f Dockerfile-patient -t patient-service .
