--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ["main", "Dev"]
 
+permissions:
+  id-token: write  
+  contents: read    
+
 jobs:
   docker:
     runs-on: ubuntu-latest
