--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -35,12 +35,12 @@ jobs:
       - name: Build Docker image for Appointment
         run: |
           IMAGE_TAG=${GITHUB_SHA::8}   
-          docker build -t -f Dockerfile-appointment  $APPOINTMENT_ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -f Dockerfile-appointment  -t $APPOINTMENT_ECR_REPOSITORY:$IMAGE_TAG .
 
-      - name: Build Docker image for Appointment
+      - name: Build Docker image for Patient
         run: |
           IMAGE_TAG=${GITHUB_SHA::8}   
-          docker build -t -f Dockerfile-patient $PATIENT_ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -f Dockerfile-patient -t $PATIENT_ECR_REPOSITORY:$IMAGE_TAG .
 
       - name: Tag and push Docker image for Appointment
         run: |
