--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -47,7 +47,7 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           IMAGE_TAG=${GITHUB_SHA::8}
           IMAGE_URI=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.APPOINTMENT_ECR_REPOSITORY }}:$IMAGE_TAG
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
+          docker tag $APPOINTMENT_ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
           docker push $IMAGE_URI
 
@@ -56,7 +56,7 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           IMAGE_TAG=${GITHUB_SHA::8}
           IMAGE_URI=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.PATIENT_ECR_REPOSITORY }}:$IMAGE_TAG
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
+          docker tag $PATIENT_ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
           docker push $IMAGE_URI
 
