Add Terragrunt installation and AWS identity verification

--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -29,17 +29,35 @@ jobs:
           role-to-assume: arn:aws:iam::768132174891:role/poc-2-tp-role
           aws-region: ap-south-1
 
+      - name: Install Terragrunt
+        run: |
+          curl -L https://github.com/gruntwork-io/terragrunt/releases/latest/download/terragrunt_linux_amd64 -o terragrunt
+          chmod +x terragrunt
+          sudo mv terragrunt /usr/local/bin/
+          
+      - name: Verify AWS Identity
+        run: aws sts get-caller-identity
+
+      - name: Terragrunt Plan
+        run: terragrunt run --all plan
+        working-directory: infrastructure-live
+
+      - name: Terragrunt Apply
+        if: github.ref == 'refs/heads/main'
+        run: terragrunt run --all apply -auto-approve
+        working-directory: infrastructure-live
+
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build Docker image for Appointment
         run: |
-          IMAGE_TAG=${GITHUB_SHA::8}   
+          IMAGE_TAG=latest 
           docker build -f Dockerfile-appointment  -t $APPOINTMENT_ECR_REPOSITORY:$IMAGE_TAG .
 
       - name: Build Docker image for Patient
         run: |
-          IMAGE_TAG=${GITHUB_SHA::8}   
+          IMAGE_TAG=latest 
           docker build -f Dockerfile-patient -t $PATIENT_ECR_REPOSITORY:$IMAGE_TAG .
 
       - name: Tag and push Docker image for Appointment
