Change working directory for Terragrunt commands

--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -40,12 +40,12 @@ jobs:
 
       - name: Terragrunt Plan
         run: terragrunt run --all plan
-        working-directory: infrastructure-live
+        working-directory: Infra
 
       - name: Terragrunt Apply
         if: github.ref == 'refs/heads/main'
         run: terragrunt run --all apply -auto-approve
-        working-directory: infrastructure-live
+        working-directory: Infra
 
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
