Add Terraform setup to Hackathon workflow
Added Terraform setup step to the workflow.

--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -28,6 +28,11 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::768132174891:role/poc-2-tp-role
           aws-region: ap-south-1
+          
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
       - name: Install Terragrunt
         run: |
