--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -68,7 +68,7 @@ jobs:
       - name: Tag and push Docker image for Appointment
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          IMAGE_TAG=${GITHUB_SHA::8}
+          IMAGE_TAG=latest
           IMAGE_URI=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.APPOINTMENT_ECR_REPOSITORY }}:$IMAGE_TAG
           docker tag $APPOINTMENT_ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
@@ -77,7 +77,7 @@ jobs:
       - name: Tag and push Docker image for Patient
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          IMAGE_TAG=${GITHUB_SHA::8}
+          IMAGE_TAG=latest
           IMAGE_URI=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.PATIENT_ECR_REPOSITORY }}:$IMAGE_TAG
           docker tag $PATIENT_ECR_REPOSITORY:$IMAGE_TAG $IMAGE_URI
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
