--- a/.github/workflows/HackathonWorkflow.yaml
+++ b/.github/workflows/HackathonWorkflow.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Terragrunt Apply
         if: github.ref == 'refs/heads/main'
-        run: terragrunt run-all apply --terragrunt-non-interactive
+        run: terragrunt run --all --non-interactive -- apply -auto-approve
         working-directory: Infra
 
       - name: Login to ECR
