--- a/Dockerfile-patient
+++ b/Dockerfile-patient
@@ -2,7 +2,7 @@
 FROM node:20-alpine
 
 # Set working directory
-WORKDIR /app
+WORKDIR /
 
 # Copy package files first (better caching)
 COPY package.json ./
